--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,11 +83,30 @@ jobs:
         pod install
         ls -la
     
+    - name: Setup Code Signing
+      run: |
+        cd ios
+        # Create a temporary development team
+        security create-keychain -p "" build.keychain
+        security default-keychain -s build.keychain
+        security unlock-keychain -p "" build.keychain
+        security set-keychain-settings -t 3600 -u build.keychain
+        
+        # Create a temporary certificate
+        openssl genrsa -out private.key 2048
+        openssl req -new -x509 -key private.key -out cert.cer -days 365 -subj "/CN=Development"
+        security add-certificates cert.cer
+        
+        # Update project settings
+        /usr/libexec/PlistBuddy -c "Set :DEVELOPMENT_TEAM ''" clipperapp.xcodeproj/project.pbxproj
+        /usr/libexec/PlistBuddy -c "Set :CODE_SIGN_IDENTITY 'Apple Development'" clipperapp.xcodeproj/project.pbxproj
+        /usr/libexec/PlistBuddy -c "Set :CODE_SIGN_STYLE 'Automatic'" clipperapp.xcodeproj/project.pbxproj
+    
     - name: Build iOS Debug
       run: |
         cd ios
         xcodebuild -list
-        xcodebuild -workspace clipperapp.xcworkspace -scheme clipperapp -configuration Debug -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14' build
+        xcodebuild -workspace clipperapp.xcworkspace -scheme clipperapp -configuration Debug -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14' build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
     
     - name: Upload iOS Build
       uses: actions/upload-artifact@v4
