--- a/.github/workflows/release-eas.yml
+++ b/.github/workflows/release-eas.yml
@@ -27,7 +27,7 @@ jobs:
       run: npm install -g eas-cli
     
     - name: Configure EAS
-      run: eas build:configure --platform android,ios
+      run: eas build:configure --platform all
       env:
         EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
     
