--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
         "android.permission.WRITE_EXTERNAL_STORAGE",
         "android.permission.ACCESS_MEDIA_LOCATION"
       ],
-      "package": "com.clipper.clipper_app"
+      "package": "com.clipper.clipperapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
