--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#a4a4a4"
       },
       "permissions": [
         "CAMERA",
